# movie_agent

./: .env.localhost  Justfile  README.md  pyproject.toml
src/: config.py  dependencies.py  main.py  schemas.py
src/agent/: agent.py  system_prompt.txt
src/clients/: __init__.py  openai.py  tmdb.py
src/mcp/: server.py
src/mcp/tools/: discover_movie.py  genre_map.py  list_popular.py  movie_details.py  schemas.py
tests/integration/: test_mcp_client.py  test_tmdb_client.py
